retrieveUnpackaged/objects/Test_Case__c.object
<CustomObject>
    <fields>
        <fullName>Business_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Requirement</label>
        <referenceTo>Business_Requirement__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Title__c</fullName>
        <formula>Business_Requirement__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requirement Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Case_Title__c</fullName>
        <label>Test Case Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Plan</label>
        <referenceTo>Test_Plan__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{000000}</displayFormat>
        <label>Test Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>